[package]
name = "kusto-query"
version = "0.1.1"
edition = "2021"
description = "Slim Kusto CLI — query Azure Data Explorer and save results as KDF files"
license = "MIT"
repository = "https://github.com/danield137/ku"
homepage = "https://github.com/danield137/ku"
readme = "README.md"
keywords = ["kusto", "cli", "azure", "kql", "adx"]
categories = ["command-line-utilities"]

[[bin]]
name = "ku"
path = "src/main.rs"

[lib]
name = "ku"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

